--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.USES_POLICY_FORCE_LOCK" />
+
     <application
         android:name=".ReminderApp"
         android:allowBackup="true"
@@ -29,6 +34,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.main.MainActivity" />
         </activity>
+        <receiver
+            android:name=".ui.create.AlarmReceiver"
+            android:enabled="true"
+            android:exported="false" />
+        <service
+            android:name=".ui.create.ReminderService"
+            android:exported="false"
+            android:enabled="true"/>
     </application>
 
 </manifest>
